@@ -1,0 +1,46 @@
+
+# Licensed to Elasticsearch B.V. under one or more contributor
+# license agreements. See the NOTICE file distributed with
+# this work for additional information regarding copyright
+# ownership. Elasticsearch B.V. licenses this file to you under
+# the Apache License, Version 2.0 (the "License"); you may
+# not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#   http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing,
+# software distributed under the License is distributed on an
+# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+# KIND, either express or implied.  See the License for the
+# specific language governing permissions and limitations
+# under the License.
+
+# frozen_string_literal: true
+
+require 'spec_helper'
+
+module ElasticAPM
+  RSpec.describe Util::DeepDup do
+    context 'hashes' do
+      it 'makes a copy' do
+        obj1 = Object.new
+        obj2 = Object.new
+        orig = { a: obj1, nested: { b: obj2 } }
+
+        expect(Util::DeepDup.dup(orig)[:a]).to_not be obj1
+        expect(Util::DeepDup.dup(orig)[:nested][:b]).to_not be obj2
+      end
+    end
+
+    context 'arrays' do
+      it 'makes a copy' do
+        obj = Object.new
+        orig = [obj]
+
+        expect(orig.dup.first).to be obj
+        expect(Util::DeepDup.dup(orig).first).to_not be obj
+      end
+    end
+  end
+end
